--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "scripts": {
     "dev:client": "cd client && npm start",
     "dev:server": "cd server && npm run dev:server",
+    "build": "cd client && npm run build",
     "lint": "eslint . --ext .js",
     "test": "jest --detectOpenHandles --runInBand --forceExit",
     "test:watch": "jest --onlyChanged --watch",
