--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.4",
+    "coveralls": "^3.1.1",
     "dotenv": "^10.0.0",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
@@ -32,6 +33,7 @@
     "jest-watch-typeahead": "^0.6.5",
     "lint-staged": "^11.2.6",
     "mongodb-memory-server": "^8.4.2",
+    "mongoose": "^6.2.10",
     "prettier": "^2.6.2"
   },
   "scripts": {
