--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,9 @@ jobs:
   build-client:
     name: Client Build (Node + Webpack)
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./client
 
     steps:
       - name: ♻️ Check out Git Repository
@@ -20,18 +23,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
 
-      - name: Cache node modules
-        uses: actions/cache@v2
-        id: npm_cache_id
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-cache-
-            ${{ runner.os }}-
-
       - name: ⬇️  Install packages
-        if: steps.npm_cache_id.outputs.cache-hit != 'true'
         run: npm install
 
       - name: 🏗 Build client files
@@ -53,6 +45,7 @@ jobs:
       - name: Run Docker build
         run: |
           cp .env.sample .env
+          cp .env ./client/.env
           docker-compose up --build -d
 
       - name: Should be running on localhost
