--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,7 +5,7 @@ RUN mkdir -p /usr/src/app/
 WORKDIR /usr/src/app/
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
-COPY package.json .
+COPY package*.json .
 RUN npm install
 
 COPY ./ ./
