--- a/.github/workflows/branch_check.yml
+++ b/.github/workflows/branch_check.yml
@@ -8,9 +8,9 @@ on:
 
 jobs:
 
-  # test:
-  #   uses: ./.github/workflows/test.yml
+  test:
+    uses: ./.github/workflows/test.yml
 
   build:
-    # needs: [test]
+    needs: [test]
     uses: ./.github/workflows/build.yml
