--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,34 +5,34 @@ on:
 
 jobs:
 
-  # build-client:
-  #   name: Client Build (Node + Webpack)
-  #   runs-on: ubuntu-latest
-  #   defaults:
-  #     run:
-  #       working-directory: ./client
+  build-client:
+    name: Client Build (Node + Webpack)
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./client
 
-  #   steps:
-  #     - name: ♻️ Check out Git Repository
-  #       uses: actions/checkout@v2
-  #       with:
-  #         persist-credentials: false
+    steps:
+      - name: ♻️ Check out Git Repository
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
 
-  #     - name: 🔖 Set up Node
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: ${{ matrix.node }}
+      - name: 🔖 Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
 
-  #     - name: ⬇️  Install packages
-  #       run: npm install
+      - name: ⬇️  Install packages
+        run: npm install
 
-  #     - name: 🏗 Build client files
-  #       env:
-  #         NODE_ENV: production
-  #       run: npm run build
+      - name: 🏗 Build client files
+        env:
+          NODE_ENV: production
+        run: npm run build
 
   check-docker:
-    # needs: [build-client]
+    needs: [build-client]
     runs-on: ubuntu-latest
 
     name: Verify Docker Image Runs
