repair broken Docker images (#35)
* remove duplicate docker rm command in workflow

* update express.static path serving client files

* organize docker build script resources

* edit nginx configuration ports

* new proxy nginx config

* build working ngnix + node server Docker containers

* create working docker-compose build

* attempt docker dev image build in GitHub actions

* branch check worklow yml typo

* build worklow yml typo

* build dev image and test deploy in workflow

* build worklow yml typo

* build and push nginx image to DockerHub

* undo IGNORING build folder in docker image

* remove seperate NGINX DockerHub image

* tweak server CORS option

* modify server CORS policy

* git clone on EC2 deployment

* update EC2 setup instructions

* copy sample env file for ci/cd

* avoid pushing to DockerHub

* refactor with seperate Dockerfiles

* seperate client packages and config

* seperate server packages and config

* delete old config files

* put lintstaged in root folder

* delete coverage folder

* remove broken ESModule constant exports

* remove broken ESModule constant exports

* create seperate .env files for client/server

* handle .env file in EC2 deployment

* fix config setup for client

* runnable docker container with env variables

* remove all references to DockerHub

* delete coverage files

* ignore coverage folders properly

* fix workflow secret interpolation

* make secret values strings

* do with passing down workflow secrets

* use workflow inputs

* use workflow inputs

* use workflow inputs

* reference secrets for sub folder names

* interpolate secret string

* interpolate secret string

* combine seperate jest test configs

* remove unused packages in client/server

* add build command to main package.json

* add packages for CI/CD pipeline

* use working directory for client build workflow

* use working directory for clie

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,8 +55,16 @@ jobs:
             ${{ runner.os }}-npm-cache-
             ${{ runner.os }}-
 
-      - name: ⬇️  Install packages
+      - name: ⬇️  Install testing packages
         if: steps.npm_cache_id.outputs.cache-hit != 'true'
+        run: npm install
+
+      - name: ⬇️ Install Client packages
+        working-directory: ./client
+        run: npm install
+
+      - name: ⬇️ Install Server packages
+        working-directory: ./server
         run: npm install
 
       - name: 🧽 Lint all files
@@ -69,19 +77,3 @@ jobs:
         uses: coverallsapp/github-action@v1.1.2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-
-
-        # services:
-        #   mongodb:
-        #       image: mongo
-        #       env:
-        #         MONGO_INITDB_ROOT_USERNAME: test
-        #         MONGO_INITDB_ROOT_PASSWORD: password
-        #         MONGO_INITDB_DATABASE: test
-        #       options: >-
-        #         --health-cmd mongo
-        #         --health-interval 10s
-        #         --health-timeout 5s
-        #         --health-retries 5
-        #       ports:
-        #         - 27017:27017
