--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,19 +2,16 @@ name: build
 
 on:
   workflow_call:
-    secrets:
-      DOCKER_HUB_USERNAME:
-        required: true
-      DOCKER_HUB_PASSWORD:
-        required: true
-      DOCKER_HUB_REPO:
-        required: true
 
 jobs:
 
-  build-node:
-    name: Node Build
+  build-client:
+    name: Client Build (Node + Webpack)
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./client
+
     steps:
       - name: ♻️ Check out Git Repository
         uses: actions/checkout@v2
@@ -26,18 +23,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
 
-      - name: Cache node modules
-        uses: actions/cache@v2
-        id: npm_cache_id
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-cache-
-            ${{ runner.os }}-
-
       - name: ⬇️  Install packages
-        if: steps.npm_cache_id.outputs.cache-hit != 'true'
         run: npm install
 
       - name: 🏗 Build client files
@@ -45,64 +31,9 @@ jobs:
           NODE_ENV: production
         run: npm run build
 
-  build-docker:
-    needs: [build-node]
-    runs-on: ubuntu-latest
-
-    name: Docker Image Build + Publish
-    steps:
-      - name: ♻️ Check out Git Repository
-        uses: actions/checkout@v2
-        with:
-          persist-credentials: false
-
-      - name: Cache node modules
-        uses: actions/cache@v2
-        id: npm_cache_id
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-cache-
-            ${{ runner.os }}-
-
-      - name: ⬇️  Install packages
-        if: steps.npm_cache_id.outputs.cache-hit != 'true'
-        run: npm install
-
-      - name: 🔖 Set up Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node }}
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: 🐳 Publish to Docker Registry
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          file: ./Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_REPO }}:latest
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_REPO }}:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_REPO }}:buildcache,mode=max
-
   check-docker:
-    needs: [build-docker]
+    needs: [build-client]
     runs-on: ubuntu-latest
-    # services:
-    #   woofer-build:
-    #     image: ${{ secrects.DOCKER_HUB_REPO }}
-    #     ports:
-    #        - 3000:3000
 
     name: Verify Docker Image Runs
     steps:
@@ -111,21 +42,25 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Pull Docker Image
-        run: |
-          docker pull ${{ secrets.DOCKER_HUB_REPO }}:latest
+      - name: 🔖 Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
 
-      - name: Run Docker Container
-        run: |
-          docker run \
-            -d \
-            --rm \
-            -p 3000:3000 \
-            --env-file ./.env.sample \
-            --name woofer \
-            -t spencerlepine/woofer:latest
+      - name: ⬇️  Install Client packages
+        working-directory: ./client
+        run: npm install
 
-      # curl command fails
-      # - name: Should be running on localhost
-      #   run: |
-      #     curl http://localhost:3000
+      - name: ⬇️  Install Server packages
+        working-directory: ./client
+        run: npm install
+
+      - name: Run Docker build
+        run: |
+          cp .env.sample .env
+          cp .env ./client/.env
+          docker-compose up --build -d
+
+      - name: Should be running on localhost
+        run: |
+          curl http://localhost
