--- a/package.json
+++ b/package.json
@@ -1,105 +1,58 @@
 {
   "name": "woofer",
   "version": "1.0.0",
-  "description": "Dating app for dogs, a full stack MERN project",
-  "author": "Spencer Lepine",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/spencerlepine/woofer"
-  },
-  "keywords": [
-    "node",
-    "express",
-    "react",
-    "mongodb"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "start": "node server/src/index.js",
-    "dev:server": "nodemon server/src/index.js",
-    "dev:client": "webpack serve --config ./webpack.dev.config.js --env development --mode development",
-    "build": "webpack --config ./webpack.prod.config.js --mode production",
-    "lint": "eslint . --ext .js",
-    "test": "jest --detectOpenHandles --runInBand --forceExit",
-    "test:watch": "jest --onlyChanged --watch"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "description": "Dating app for dogs. Customize a dating profile, update preferences, and match/chat with nearby users.",
+  "main": "index.js",
   "dependencies": {
-    "@babel/preset-react": "^7.16.7",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.21.4",
-    "babel-loader": "^8.2.4",
-    "bulma": "^0.9.3",
-    "compression": "^1.7.4",
-    "compression-webpack-plugin": "^9.2.0",
-    "cors": "^2.8.5",
-    "coveralls": "^3.1.1",
-    "css-loader": "^6.7.1",
-    "dotenv-webpack": "^7.1.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-react-app": "^7.0.0",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-testing-library": "^5.1.0",
-    "express": "^4.17.3",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^6.3.0",
-    "firebase": "^8.10.1",
-    "helmet": "^5.0.2",
-    "history": "^5.3.0",
-    "html-webpack-plugin": "^5.5.0",
-    "http-status": "^1.5.0",
-    "lint-staged": "^11.2.6",
-    "mongodb-memory-server": "^8.4.1",
-    "mongoose": "^6.2.5",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.15",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^5.2.0",
-    "react-toastify": "^8.2.0",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1",
-    "web-vitals": "^2.1.4",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
-    "winston": "^3.6.0",
-    "xss-clean": "^0.1.1"
-  },
-  "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@shelf/jest-mongodb": "^2.2.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.5.1",
+    "babel-loader": "^8.2.4",
+    "coveralls": "^3.1.1",
     "dotenv": "^10.0.0",
-    "eslint": "^8.11.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.2",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "html-loader": "^2.1.2",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-testing-library": "^5.2.1",
     "husky": "^7.0.4",
-    "interpolate-html-plugin": "^4.0.0",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.5",
-    "joi": "^17.6.0",
-    "prettier": "^2.5.1",
-    "supertest": "^6.2.2"
-  }
+    "lint-staged": "^11.2.6",
+    "mongoose": "^6.2.10",
+    "prettier": "^2.6.2"
+  },
+  "scripts": {
+    "dev:client": "cd client && npm start",
+    "dev:server": "cd server && npm run dev:server",
+    "build": "cd client && npm run build",
+    "lint": "eslint . --ext .js",
+    "test": "jest --detectOpenHandles --runInBand --forceExit",
+    "test:watch": "jest --onlyChanged --watch",
+    "prepare": "cd client && npm i && cd ../server && npm i"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/spencerlepine/woofer.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/spencerlepine/woofer/issues"
+  },
+  "homepage": "https://github.com/spencerlepine/woofer#readme"
 }
