--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,12 +40,12 @@ jobs:
             NC='\033[0m' # No Color
             echo -e "$GREEN Starting EC2 deployment script $NC"
 
-            docker kill $(docker ps -q)
-            docker rm $(docker ps -a -q)
-            echo -e "$GREEN Successfully stopped all docker containers $NC \n"
+            # docker kill $(docker ps -q)
+            # docker rm $(docker ps -a -q)
+            # echo -e "$GREEN Successfully stopped all docker containers $NC \n"
 
-            docker rmi $(docker images -q)
-            echo -e "$GREEN Successfully removed all docker images $NC \n"
+            # docker rmi $(docker images -q)
+            # echo -e "$GREEN Successfully removed all docker images $NC \n"
 
             echo -e "Is there a .env file in the root directory?"
             test -e ~/.env && echo -e "$GREEN env file exists" || echo -e "$RED env file not found $NC && exit 1"
@@ -55,6 +55,9 @@ jobs:
 
             git clone ${{ github.repository }}
             echo -e "$GREEN Successfully cloned the repository $NC \n"
+
+            docker-compose down
+            echo -e "$GREEN Stopped existing container $NC \n"
 
             cp .env ./${{ github.event.repository.name }}/.env
             cp .env ./${{ github.event.repository.name }}/client/.env
