--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,20 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: 🧪 Test EC2 SSH Connection
+        uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.EC2_REMOTE_HOST }}
+            username: ${{ secrets.EC2_REMOTE_USER }}
+            key: ${{ secrets.EC2_SSH_KEY }}
+            passphrase: ${{ secrets.EC2_PASSPHRASE }}
+            port: 22
+            script_stop: true
+            script: |
+              GREEN='\033[0;32m'
+              NC='\033[0m' # No Color
+              echo -e "$GREEN Connected to the EC2 Instance! $NC"
+
       - name: Deploy to EC2 Server
         uses: appleboy/ssh-action@master
         with:
@@ -33,6 +47,8 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           passphrase: ${{ secrets.EC2_PASSPHRASE }}
           port: 22
+          timeout: 200m
+          command_timeout: 200m
           script_stop: true
           script: |
             RED='\033[0;31m'
@@ -40,20 +56,21 @@ jobs:
             NC='\033[0m' # No Color
             echo -e "$GREEN Starting EC2 deployment script $NC"
 
-            docker kill $(docker ps -q)
-            docker rm $(docker ps -a -q)
-            echo -e "$GREEN Successfully stopped all docker containers $NC \n"
+            # docker kill $(docker ps -q)
+            # docker rm $(docker ps -a -q)
+            # echo -e "$GREEN Successfully stopped all docker containers $NC \n"
 
-            docker rmi $(docker images -q)
-            echo -e "$GREEN Successfully removed all docker images $NC \n"
+            # docker rmi $(docker images -q)
+            # echo -e "$GREEN Successfully removed all docker images $NC \n"
 
             echo -e "Is there a .env file in the root directory?"
             test -e ~/.env && echo -e "$GREEN env file exists" || echo -e "$RED env file not found $NC && exit 1"
 
-            rm -rf /${{ github.event.repository.name }}
+            # rm -rf /${{ github.event.repository.name }}
+            rm -rf woofer
             echo -e "$GREEN Deleted old repository folder $NC \n"
 
-            git clone ${{ github.repository }}
+            git clone "https://github.com/${{ github.repository }}.git"
             echo -e "$GREEN Successfully cloned the repository $NC \n"
 
             cp .env ./${{ github.event.repository.name }}/.env
@@ -61,6 +78,9 @@ jobs:
             echo -e "$GREEN Duplicated the .env file $NC \n"
 
             cd ${{ github.event.repository.name }}
+
+            docker-compose down
+            echo -e "$GREEN Stopped existing container $NC \n"
 
             docker-compose up --build -d
 
