--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.2.0",
     "sass-loader": "^12.6.0",
+    "socket.io-client": "4.4.0",
     "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4",
     "webpack-cli": "^4.9.2",
