--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,3 @@
-
-
 FROM node:10-alpine as builder
 
 # create and set app directory
@@ -8,7 +6,7 @@ WORKDIR /usr/src/app/
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
 COPY package.json .
-RUN npm install && npm cache clean --force
+RUN npm install
 
 COPY . .
 
