--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,10 +5,11 @@ FROM node:14.15.3-alpine3.12
 # create and set app directory
 RUN mkdir -p /usr/src/nodejs/
 WORKDIR /usr/src/nodejs/
+ENV PATH /usr/src/nodejs/node_modules/.bin:$PATH
 
 # install app dependencies
 COPY package.json .
-RUN npm install && npm cache clean --force
+RUN npm install
 
 # copy app source to destination container
 COPY . .
