socket.io integration (#38)
* remove docker compose on EC2 step

* add socket.io to server

* sample chat with socket.io in client

* render broken sample chat

* working full stack socket.io integration

* install socket.io package

* created simple chat box

* docker unable to find socket.io package

* rename PR template file

--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/index.js",
-    "dev:server": "nodemon src/index.js",
-    "lint": "eslint . --ext .js",
-    "test": "jest --detectOpenHandles --runInBand --forceExit",
-    "test:watch": "jest --onlyChanged --watch"
+    "dev:server": "nodemon src/index.js"
   },
   "browserslist": {
     "production": [
@@ -46,6 +43,8 @@
     "mongoose": "^6.2.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
+    "socket.io": "^4.4.1",
+    "uuid": "8.3.2",
     "winston": "^3.6.0",
     "xss-clean": "^0.1.1"
   },
