--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -8,14 +8,14 @@ on:
 jobs:
 
   node_ci:
-    uses: ./.github/workflows/reuasable_steps/node_ci.yml
+    uses: ./.github/workflows/node_ci.yml
 
   docker_ci:
-    uses: ./.github/workflows/reuasable_steps/docker_ci.yml
+    uses: ./.github/workflows/docker_ci.yml
 
   deploy:
     needs: [node_ci, docker_ci]
-    uses: ./.github/workflows/reuasable_steps/deploy.yml
+    uses: ./.github/workflows/deploy.yml
     secrets:
       ENV_PRODUCTION: ${{ secrets.EC2_PORT }}
       DOCKERHUB_USERNAME: ${{ secrets.EC2_PORT }}
