--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -5,7 +5,42 @@ on:
 
 jobs:
 
+  repo_lint:
+    name: Lint Code
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node: 16
+
+    steps:
+      - name: "☁️ Check out Git Repository"
+        uses: actions/checkout@v2
+
+      - name: "🔧 Set up Node"
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: "⚡ Cache node modules"
+        uses: actions/cache@v2
+        id: npm_cache_id
+        with:
+          path: node_modules
+          key: lint-${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            lint-${{ runner.os }}-npm-cache-
+            lint-${{ runner.os }}-
+
+      - name: "📦 Install linter dependencies"
+        if: steps.npm_cache_id.outputs.cache-hit != 'true'
+        run: npm install
+
+      - name: "🧽 Lint all files"
+        run: npm run lint --if-present
+
   client_ci:
+    need: [repo-lint]
     name: Client CI
     runs-on: ${{ matrix.os }}
     env:
@@ -49,9 +84,6 @@ jobs:
         if: steps.npm_cache_id.outputs.cache-hit != 'true'
         run: npm install
 
-      - name: "🧽 Lint all files"
-        run: npm run lint --if-present
-
       - name: "✅  Run tests"
         run: npm run test --if-present -- --coverage
 
@@ -66,6 +98,7 @@ jobs:
           parallel: true
 
   server_ci:
+    need: [repo-lint]
     name: Server CI
     runs-on: ${{ matrix.os }}
     env:
@@ -111,9 +144,6 @@ jobs:
       - name: "📦 Install dependencies"
         if: steps.npm_cache_id.outputs.cache-hit != 'true'
         run: npm install
-
-      - name: "🧽 Lint all files"
-        run: npm run lint --if-present
 
       - name: "✅  Run tests"
         run: npm run test --if-present -- --coverage
