organize need steps for CI/CD

--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: npm run lint --if-present
 
   client_ci:
-    need: [repo-lint]
+    needs: [repo-lint]
     name: Client CI
     runs-on: ${{ matrix.os }}
     env:
@@ -98,7 +98,7 @@ jobs:
           parallel: true
 
   server_ci:
-    need: [repo-lint]
+    needs: [repo-lint]
     name: Server CI
     runs-on: ${{ matrix.os }}
     env:
