--- a/package.json
+++ b/package.json
@@ -66,11 +66,16 @@
     },
     "parser": "@babel/eslint-parser",
     "parserOptions": {
+      "requireConfigFile": false,
+      "babelOptions": {
+        "presets": [
+          "@babel/preset-react"
+        ]
+      },
       "ecmaFeatures": {
         "jsx": true
       },
-      "ecmaVersion": 12,
-      "requireConfigFile": false,
+      "ecmaVersion": "latest",
       "sourceType": "module"
     },
     "rules": {
@@ -90,5 +95,9 @@
       "prettier",
       "react"
     ]
+  },
+  "dependencies": {
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-react": "^7.16.7"
   }
 }
