--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -69,9 +69,6 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
 
-      - name: "➡️ Enter ${{ env.working-directory }} folder"
-        run: cd ${{ env.working-directory }}
-
       - name: "⚡ Cache node modules"
         uses: actions/cache@v2
         id: npm_cache_id
@@ -83,13 +80,16 @@ jobs:
             client-${{ runner.os }}-
 
       - name: "📦 Install dependencies"
+        working-directory: ${{ env.working-directory }}
         if: steps.npm_cache_id.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "✅  Run tests"
+       working-directory: ${{ env.working-directory }}
         run: npm run test -- --coverage
 
       - name: "📁 Upload test coverage artifact"
+        working-directory: ${{ env.working-directory }}
         uses: actions/upload-artifact@v3
         with:
           name: ${{ env.SERVER_COVERAGE_OUTPUT }}
@@ -97,6 +97,7 @@ jobs:
           retention-days: 3
 
       - name: "🏗 Build client"
+        working-directory: ${{ env.working-directory }}
         run: npm run build --if-present
 
   server_ci:
@@ -130,9 +131,6 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
 
-      - name: "➡️ Enter ${{ env.working-directory }} folder"
-        run: cd ${{ env.working-directory }}
-
       - name: "⚡ Cache node modules"
         uses: actions/cache@v2
         id: npm_cache_id
@@ -144,13 +142,16 @@ jobs:
             server-${{ runner.os }}-
 
       - name: "📦 Install dependencies"
+        working-directory: ${{ env.working-directory }}
         if: steps.npm_cache_id.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "✅  Run tests"
+        working-directory: ${{ env.working-directory }}
         run: npm run test -- --coverage
 
       - name: "📁 Upload test coverage artifact"
+        working-directory: ${{ env.working-directory }}
         uses: actions/upload-artifact@v3
         with:
           name: ${{ env.SERVER_COVERAGE_OUTPUT }}
