cache testing modules also

--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -9,7 +9,7 @@ jobs:
     name: Docker CI
     runs-on: ubuntu-latest
     env:
-      testing-directory: ./__tests__
+      working-directory: ./__tests__
 
     steps:
       - name: "☁️ Check out Git Repository"
@@ -34,7 +34,7 @@ jobs:
         uses: actions/cache@v2
         id: npm_cache_id
         with:
-          path: node_modules
+          path: ${{ env.working-directory }}node_modules
           key: test-${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             test-${{ runner.os }}-npm-cache-
