--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -9,40 +9,40 @@ env:
 
 jobs:
 
-  repo_lint:
-    name: Lint Code
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
+  # repo_lint:
+  #   name: Lint Code
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     fail-fast: false
 
-    steps:
-      - name: "☁️ Check out Git Repository"
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: "☁️ Check out Git Repository"
+  #       uses: actions/checkout@v2
 
-      - name: "🔧 Set up Node"
-        uses: actions/setup-node@v1
-        with:
-          node-version: 16
+  #     - name: "🔧 Set up Node"
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 16
 
-      - name: "⚡ Cache node modules"
-        uses: actions/cache@v2
-        id: npm_cache_id
-        with:
-          path: ${{ env.working-directory }}node_modules
-          key: lint-${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            lint-${{ runner.os }}-npm-cache-
-            lint-${{ runner.os }}-
+  #     - name: "⚡ Cache node modules"
+  #       uses: actions/cache@v2
+  #       id: npm_cache_id
+  #       with:
+  #         path: ${{ env.working-directory }}node_modules
+  #         key: lint-${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+  #         restore-keys: |
+  #           lint-${{ runner.os }}-npm-cache-
+  #           lint-${{ runner.os }}-
 
-      - name: "📦 Install linter dependencies"
-        if: steps.npm_cache_id.outputs.cache-hit != 'true'
-        run: npm install
+  #     - name: "📦 Install linter dependencies"
+  #       if: steps.npm_cache_id.outputs.cache-hit != 'true'
+  #       run: npm install
 
-      - name: "🧽 Lint all files"
-        run: npm run lint --if-present
+  #     - name: "🧽 Lint all files"
+  #       run: npm run lint --if-present
 
   client_ci:
-    needs: [repo_lint]
+    # needs: [repo_lint]
     runs-on: ${{ matrix.os }}
     env:
       working-directory: ./client
@@ -100,7 +100,7 @@ jobs:
         run: npm run build --if-present
 
   server_ci:
-    needs: [repo_lint]
+    # needs: [repo_lint]
     runs-on: ${{ matrix.os }}
     env:
       working-directory: ./server
