--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -62,7 +62,7 @@ jobs:
 
       - name: "⚙️ Generate .env file"
         run: |
-          mv .env.sample ${{ env.working-directory }}.env
+          cp .env.sample ${{ env.working-directory }}.env
 
       - name: "🔧 Set up Node"
         uses: actions/setup-node@v1
@@ -73,7 +73,7 @@ jobs:
         uses: actions/cache@v2
         id: npm_cache_id
         with:
-          path: ${{ env.working-directory }}node_modules
+          path: ${{ env.working-directory }}/node_modules
           key: client-${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             client-${{ runner.os }}-npm-cache-
@@ -123,7 +123,7 @@ jobs:
 
       - name: "⚙️ Generate .env file"
         run: |
-          mv .env.sample ${{ env.working-directory }}.env
+          cp .env.sample ${{ env.working-directory }}.env
 
       - name: "🔧 Set up Node"
         uses: actions/setup-node@v1
@@ -134,7 +134,7 @@ jobs:
         uses: actions/cache@v2
         id: npm_cache_id
         with:
-          path: ${{ env.working-directory }}node_modules
+          path: ${{ env.working-directory }}/node_modules
           key: client-${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             server-${{ runner.os }}-npm-cache-
