--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -62,7 +62,7 @@ jobs:
 
       - name: "⚙️ Generate .env file"
         run: |
-          cp .env.sample ${{ env.working-directory }}.env
+          cp .env.sample ${{ env.working-directory }}/.env
 
       - name: "🔧 Set up Node"
         uses: actions/setup-node@v1
@@ -123,7 +123,7 @@ jobs:
 
       - name: "⚙️ Generate .env file"
         run: |
-          cp .env.sample ${{ env.working-directory }}.env
+          cp .env.sample ${{ env.working-directory }}/.env
 
       - name: "🔧 Set up Node"
         uses: actions/setup-node@v1
