--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -35,7 +35,7 @@ jobs:
         id: npm_cache_id
         with:
           path: ${{ env.working-directory }}/node_modules
-          key: test-${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          key: test-${{ runner.os }}-npm-cache-${{ hashFiles('${{ env.working-directory }}/package-lock.json') }}
           restore-keys: |
             test-${{ runner.os }}-npm-cache-
             test-${{ runner.os }}-
