work on server ci failure

--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -123,8 +123,8 @@ jobs:
 
       - name: "⚙️ Generate .env file"
         run: |
-          mv .env.sample .env
-          mv .env.sample ${{ env.working-directory }}/.env
+          mv ./.env.sample ./.env
+          mv ./.env.sample ${{ env.working-directory }}/.env
 
       - name: "🔧 Set up Node"
         uses: actions/setup-node@v1
